--- a/values.yaml
+++ b/values.yaml
@@ -1,19 +1,66 @@
-# Default values for jira.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
-
 global:
   image:
     registry: ""
     tag: 2.27.1.0
     pullPolicy: IfNotPresent
   securityContext: {}
-  extraEnv: []
+  imagePullSecrets: []
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+  extraEnv:
+  ## нужно указывать значения из чарта bitnami rabbitmq
+  - name: RABBITMQ_HOST
+    value: geoserver-rabbitmq
+  - name: RABBITMQ_PORT
+    value: "5672"
+  - name: RABBITMQ_USER
+    value: user
+  - name: RABBITMQ_PASSWORD
+    value: bitnami
 
 services:
+  acl:
+    enabled: false
+    image:
+      registry: ""
+      image: geoservercloud/geoserver-acl
+      tag: 2.3.1
+      pullPolicy: IfNotPresent
+    service:
+      type: ClusterIP
+      containerPort: 8080
+    env:
+    - name: ACL_USERS_ADMIN_PASSWORD
+      value: "s3cr3t"
+    - name: ACL_USERS_GEOSERVER_PASSWORD
+      value: "s3cr3t"
+    - name: GEOSERVER_BUS_ENABLED
+      value: "true"
+    # - name: PG_HOST
+    #   value: pgconfigdb
+    # - name: PG_PORT
+    #   value: 5432
+    # - name: PG_DB
+    #   value: pgconfig
+    # - name: PG_SCHEMA
+    #   value: acl
+    # - name: PG_USERNAME
+    #   value: pgconfig
+    # - name: PG_PASSWORD
+    #   value: pgconfig
+    resources: {}
+    livenessProbe: {}
+    readinessProbe: {}
+    volumes: []
+    volumeMounts: []
+    securityContext: {}
+    hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
+
   admin:
     enabled: true
     replicaCount: 1
@@ -25,17 +72,24 @@ services:
     service:
       type: ClusterIP
       containerPort: 8080
-      healthPort: 8081
+      healthPort: 8080
     env: []
     resources: {}
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 30
+      periodSeconds: 10
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 30
+      periodSeconds: 10
     volumes: []
     volumeMounts: []
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
 
   config:
     enabled: true
@@ -59,14 +113,16 @@ services:
       value: /tmp/config
     - name: XDG_CONFIG_HOME
       value: /tmp
-    ingress: {}
     livenessProbe: {}
     readinessProbe: {}
-    startupProbe: {}
     volumes: []
     volumeMounts: []
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   discovery:
     enabled: true
@@ -78,18 +134,20 @@ services:
       pullPolicy: IfNotPresent
     service:
       type: ClusterIP
-      containerPort: 8080
+      containerPort: 8761
       healthPort: 8081
     resources: {}
     env: []
-    ingress: {}
     livenessProbe: {}
     readinessProbe: {}
-    startupProbe: {}
     volumes: []
     volumeMounts: []
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   gateway:
     enabled: true
@@ -107,14 +165,22 @@ services:
     env:
     - name: GEOSERVER_BASE_PATH
       value: /geoserver
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
     volumes: []
     volumeMounts: []
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   gwc:
     enabled: true
@@ -136,14 +202,32 @@ services:
       value: "/data/geowebcache"
     - name: SPRING_PROFILES_ACTIVE
       value: "datadir"
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
-    volumes: []
-    volumeMounts: []
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    volumes:
+    - name: shared-data
+      type: pvc
+      claimRef: shared-data
+    - name: geowebcache-data
+      type: pvc
+      claimRef: geowebcache-data
+    volumeMounts:
+    - name: shared-data
+      mountPath: /opt/app/data_directory
+    - name: geowebcache-data
+      mountPath: /data/geowebcache
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   rest:
     enabled: true
@@ -159,14 +243,27 @@ services:
       healthPort: 8081
     resources: {}
     env: []
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
-    volumes: []
-    volumeMounts: []
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    volumes:
+    - name: shared-data
+      type: pvc
+      claimRef: shared-data
+    volumeMounts:
+    - name: shared-data
+      mountPath: /opt/app/data_directory
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   wcs:
     enabled: true
@@ -186,14 +283,27 @@ services:
       value: "/opt/app/data_directory"
     - name: SPRING_PROFILES_ACTIVE
       value: "datadir"
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
-    volumes: []
-    volumeMounts: []
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    volumes:
+    - name: shared-data
+      type: pvc
+      claimRef: shared-data
+    volumeMounts:
+    - name: shared-data
+      mountPath: /opt/app/data_directory
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   webui:
     enabled: true
@@ -215,14 +325,38 @@ services:
       value: "/data/geowebcache"
     - name: SPRING_PROFILES_ACTIVE
       value: "datadir"
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
-    volumes: []
-    volumeMounts: []
+    - name: ACL_URL
+      value: http://acl:8080/acl/api
+    - name: ACL_USERNAME
+      value: admin
+    - name: ACL_PASSWORD
+      value: s3cr3t
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    volumes:
+    - name: shared-data
+      type: pvc
+      claimRef: shared-data
+    - name: geowebcache-data
+      type: pvc
+      claimRef: geowebcache-data
+    volumeMounts:
+    - name: shared-data
+      mountPath: /opt/app/data_directory
+    - name: geowebcache-data
+      mountPath: /data/geowebcache
     securityContext: {}
     hpa: {}
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   wfs:
     enabled: true
@@ -242,14 +376,37 @@ services:
       value: "/opt/app/data_directory"
     - name: SPRING_PROFILES_ACTIVE
       value: "datadir"
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
-    volumes: []
-    volumeMounts: []
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    volumes:
+    - name: shared-data
+      type: pvc
+      claimRef: shared-data
+    volumeMounts:
+    - name: shared-data
+      mountPath: /opt/app/data_directory
     securityContext: {}
-    hpa: {}
+    hpa:
+      enabled: true
+      minReplicas: 2
+      maxReplicas: 5
+      metrics:
+      - type: Resource
+        resource:
+          name: cpu
+          target:
+            type: Utilization
+            averageUtilization: 80
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
   wms:
     enabled: true
@@ -271,136 +428,93 @@ services:
       value: "/data/geowebcache"
     - name: SPRING_PROFILES_ACTIVE
       value: "datadir"
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
-    volumes: []
-    volumeMounts: []
+    readinessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    livenessProbe:
+      httpGet:
+        path: /actuator/health
+      initialDelaySeconds: 50
+    volumes:
+    - name: shared-data
+      type: pvc
+      claimRef: shared-data
+    - name: geowebcache-data
+      type: pvc
+      claimRef: geowebcache-data
+    volumeMounts:
+    - name: shared-data
+      mountPath: /opt/app/data_directory
+    - name: geowebcache-data
+      mountPath: /data/geowebcache
     securityContext: {}
-    hpa: {}
+    hpa:
+      enabled: true
+      minReplicas: 2
+      maxReplicas: 5
+      metrics:
+      - type: Resource
+        resource:
+          name: cpu
+          target:
+            type: Utilization
+            averageUtilization: 75
+      - type: Resource
+        resource:
+          name: memory
+          target:
+            type: Utilization
+            averageUtilization: 65
+    imagePullSecrets: []
+    nodeSelector: {}
+    tolerations: []
+    affinity: {}
 
-  rabbitmq:
-    enabled: true
-    replicaCount: 1
-    image:
-      registry: ""
-      image: rabbitmq
-      tag: 3.13.3-alpine
-      pullPolicy: IfNotPresent
-    service:
-      type: ClusterIP
-      containerPort: 8080
-      healthPort: 8081
-    resources: {}
-    env: []
-    ingress: {}
-    livenessProbe: {}
-    readinessProbe: {}
-    startupProbe: {}
-    volumes: []
-    volumeMounts: []
-    securityContext: {}
+# Values for chart bitnami/rabbitmq
+rabbitmq:
+  replicaCount: 1
+  auth:
+    username: user
+    password: bitnami
+    erlangCookie: secretcookie
+  persistence:
+    enabled: false
+    storageClass: "standard"
+    size: 8Gi
+  service:
+    type: ClusterIP
+  metrics:
+    enabled: false
 
-# This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-imagePullSecrets: []
-# This is to override the chart name.
-nameOverride: ""
-fullnameOverride: ""
-
-# This is for setting Kubernetes Annotations to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
-podAnnotations: {}
-# This is for setting Kubernetes Labels to a Pod.
-# For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels: {}
-
-podSecurityContext: {} # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-# This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
-service:
-  # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
-  type: ClusterIP
-  # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
-  port: 8080
-
-# This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
   enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  ingressClassName: "nginx"
+  labels: {}
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
   hosts:
-  - host: chart-example.local
+  - host: geoserver.yourdomain.com
     paths:
     - path: /
-      pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+      pathType: Prefix
+  tls:
+  - hosts:
+    - geoserver.yourdomain.com
+    secretName: geo-tls
 
-pvc:
-  accessModes:
-  - ReadWriteOnce
-  storage: 10Gi
-  storageClass: "hostpath"
-  local: {}
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-# This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-# livenessProbe:
-#   httpGet:
-#     path: /
-#     port: http
-# readinessProbe:
-#   httpGet:
-#     path: /
-#     port: http
-
-# This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-  # Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+persistentVolumeClaims:
+  shared-data:
+    create: true
+    claimName: shared-data
+    storageClassName: standard
+    accessModes:
+    - ReadWriteMany
+    size: 5Gi
+  geowebcache-data:
+    create: true
+    claimName: geowebcache-data
+    storageClassName: standard
+    accessModes:
+    - ReadWriteMany
+    size: 5Gi
