--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,4 +1,4 @@
 repositoryID: e30318bf-e5a7-4c6c-b6a1-ee610784cd64
 owners:
 - name: cattowy
-  email: andrew@seniorcat.dev
+  email: andrew@rellowy.tech
